SAK-19426 bug patterns identified by Findbugs
git-svn-id: https://source.sakaiproject.org/svn/calendar/trunk@84220 66ffb92e-73f9-0310-93c1-f5514f145a0a